@@ -74,6 +74,7 @@
                         <td class="content2" width="193">{TR_DOMAIN_NEW_EXPIRE} <img src="{THEME_COLOR_PATH}/images/icons/help.png" width="16" height="16" onmouseover="showTip('dmn_exp_help', event)" onmouseout="hideTip('dmn_exp_help')" /></td>
                         <td class="content"><select name="dmn_expire">
 							<option value="0">{TR_DOMAIN_EXPIRE_UNCHANGED}</option>
+							<option value="OFF">{TR_DOMAIN_EXPIRE_NEVER}</option>
 							<option value="-1">{TR_DOMAIN_EXPIRE_MIN_1_MONTH}</option>
 							<option value="1">{TR_DOMAIN_EXPIRE_PLUS_1_MONTH}</option>
 							<option value="2">{TR_DOMAIN_EXPIRE_PLUS_2_MONTHS}</option>
